--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,43 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="container">
-   
-    </div>
+    <header></header>
+    <main class="container">
+      <div class="row" id="form1">
+        <form>
+          <input class="form-control" type="text" placeholder="Default input" />
+          <label for="valenceRange"
+            >On a scale of 0 to 10. 0 being very negative & 10 being very
+            Positive</label
+          >
+          <input
+            type="range"
+            min="1"
+            max="100"
+            value="50"
+            class="slider"
+            id="valenceRange"
+          />
+          <button type="button">Submit</button>
+        </form>
+      </div>
+      <div class="row" id="form2">
+        <div class="form-check">
+          <form>
+            <input
+              class="form-check-input"
+              type="checkbox"
+              value=""
+              id="defaultCheck1"
+            />
+            <label class="form-check-label" for="defaultCheck1">
+              Default checkbox
+            </label>
+            <button type="button">Create Playlist</button>
+          </form>
+        </div>
+      </div>
+    </main>
+    <footer></footer>
   </body>
 </html>
