--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,10 @@
     <title>Mood Music</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <h1></h1>
+
+    </header>
     <main class="container">
       <div class="row" id="form1">
         <form>
