--- a/src/index.html
+++ b/src/index.html
@@ -37,15 +37,17 @@
               class="form-check-input"
               type="checkbox"
               value=""
-              id="defaultCheck1"
+              id="devastated"
             />
-            <label class="form-check-label" for="defaultCheck1">
-              Default checkbox
+            <label class="form-check-label" for="devastated">
+              devastated
             </label>
             <button type="button">Create Playlist</button>
           </form>
         </div>
       </div>
+
+      <div class="spotify-player"></div>
     </main>
     <footer></footer>
   </body>
