--- a/src/index.html
+++ b/src/index.html
@@ -7,48 +7,51 @@
     <title>Mood Music</title>
   </head>
   <body>
-    <header>
-      <h1></h1>
-
-    </header>
-    <main class="container">
-      <div class="row" id="form1">
-        <form>
-          <input class="form-control" type="text" placeholder="Default input" />
-          <label for="valenceRange"
-            >On a scale of 0 to 10. 0 being very negative & 10 being very
-            Positive</label
-          >
-          <input
-            type="range"
-            min="1"
-            max="100"
-            value="50"
-            class="slider"
-            id="valenceRange"
-          />
-          <button type="button">Submit</button>
-        </form>
-      </div>
-      <div class="row" id="form2">
-        <div class="form-check">
-          <form>
-            <input
-              class="form-check-input"
-              type="checkbox"
-              value=""
-              id="devastated"
-            />
-            <label class="form-check-label" for="devastated">
-              devastated
-            </label>
-            <button type="button">Create Playlist</button>
-          </form>
+      <header>
+        <div class="container">
+          <h1>Mood Music<span class="yellow">.</span></h1>
+          <h2>Find a playlist that's right for your mood<span class="yellow">.</span></h2>
         </div>
-      </div>
+      </header>
+      <main>
+        <div class="container">
+          <div class="row" id="form-wrapper">
+            <div class="col-md-12">
+              
+              <form>
+              <p><span id="valueMatchedWord">HAPPY</span></p>
+                <label for="valenceRange"
+                  >Find Your Mood </label
+                ><br />
+                <input
+                  type="range"
+                  min="1"
+                  max="100"
+                  value="50"
+                  class="slider"
+                  id="valenceRange"
+                /><br />
+                <button class="btn btn-dark" type="button">Submit</button>
+              </form>
+              <hr>
+            </div>
+          </div>
 
-      <div class="spotify-player"></div>
-    </main>
-    <footer></footer>
+          
+
+          <div class="spotify-player row">
+            <iframe
+              src="https://open.spotify.com/embed/playlist/7dAnb4clKDtv2ETIFAuXsA"
+              width="100%"
+              height="750px"
+              frameborder="2"
+              allowtransparency="true"
+              allow="encrypted-media"
+            ></iframe>
+          </div>
+        </div>
+
+      </main>
+      <footer></footer>
   </body>
 </html>
