--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
                   class="slider"
                   id="valenceRange"
                 /><br />
-                <button class="btn btn-dark" type="button">Submit</button>
+                <button class="btn btn-dark" type="button">Find Playlist</button>
               </form>
               <hr>
             </div>
