--- a/src/index.html
+++ b/src/index.html
@@ -7,51 +7,50 @@
     <title>Mood Music</title>
   </head>
   <body>
-      <header>
-        <div class="container">
-          <h1>Mood Music<span class="yellow">.</span></h1>
-          <h2>Find a playlist that's right for your mood<span class="yellow">.</span></h2>
-        </div>
-      </header>
-      <main>
-        <div class="container">
-          <div class="row" id="form-wrapper">
-            <div class="col-md-12">
-              
-              <form>
-              <p><span id="valueMatchedWord">HAPPY</span></p>
-                <label for="valenceRange"
-                  >Find Your Mood </label
-                ><br />
-                <input
-                  type="range"
-                  min="1"
-                  max="100"
-                  value="50"
-                  class="slider"
-                  id="valenceRange"
-                /><br />
-                <button class="btn btn-dark" type="button">Find Playlist</button>
-              </form>
-              <hr>
-            </div>
+    <header>
+      <div class="container">
+        <h1>Mood Music<span class="yellow">.</span></h1>
+        <h2>
+          Find media that's right for your mood<span class="yellow">.</span>
+        </h2>
+      </div>
+    </header>
+    <main>
+      <div class="container">
+        <div class="row" id="form-wrapper">
+          <div class="col-md-12">
+            <form>
+              <p><span id="valenceOutput">Happy</span></p>
+              <label for="valenceRange">Find Your Mood </label><br />
+              <input
+                type="range"
+                min="1"
+                max="100"
+                value="50"
+                class="slider"
+                id="valenceRange"
+              /><br />
+              <button class="btn btn-dark" type="button">Find Playlist</button>
+            </form>
+            <hr />
           </div>
-
-          
-
-          <div class="spotify-player row">
-            <iframe
+        </div>
+        <div class="row">
+          <div class="spotify-player col-md-6">
+            <h3>Set the mood with a playlist</h3>
+            <!-- <iframe
               src="https://open.spotify.com/embed/playlist/7dAnb4clKDtv2ETIFAuXsA"
               width="100%"
               height="750px"
               frameborder="2"
               allowtransparency="true"
               allow="encrypted-media"
-            ></iframe>
+            ></iframe> -->
           </div>
+          <div class="media-recommendations col-md-6"></div>
         </div>
-
-      </main>
-      <footer></footer>
+      </div>
+    </main>
+    <footer></footer>
   </body>
 </html>
