--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
                 class="slider"
                 id="valenceRange"
               /><br />
-              <button class="btn btn-dark" type="button">Find Playlist</button>
+              <button id="find" class="btn btn-dark" type="button">Find Playlist</button>
             </form>
             <hr />
           </div>
