--- a/src/index.html
+++ b/src/index.html
@@ -26,27 +26,18 @@
                 type="range"
                 min="0"
                 max="48"
-                value="24"
                 class="slider"
                 id="valenceRange"
               /><br />
-              <button id="find" class="btn btn-dark" type="button">Find Playlist</button>
+              <button id="find" class="btn btn-dark" type="button">
+                Find Playlist
+              </button>
             </form>
             <hr />
           </div>
         </div>
         <div class="row">
-          <div class="spotify-player col-md-6">
-            <h3>Set the mood with a playlist</h3>
-            <!-- <iframe
-              src="https://open.spotify.com/embed/playlist/7dAnb4clKDtv2ETIFAuXsA"
-              width="100%"
-              height="750px"
-              frameborder="2"
-              allowtransparency="true"
-              allow="encrypted-media"
-            ></iframe> -->
-          </div>
+          <div class="spotify-player col-md-6"></div>
           <div class="media-recommendations col-md-6"></div>
         </div>
       </div>
