update span with selected mood color

--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,8 @@
           <div class="col-md-12">
             <form>
               <p><span id="valenceOutput">Happy</span></p>
-              <label for="valenceRange">Find Your Mood </label><br />
+              <label for="valenceRange"><span>Find Your Mood </span> </label
+              ><br />
               <input
                 type="range"
                 min="0"
