--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,12 @@
         </div>
         <div class="row">
           <div class="spotify-player col-md-6"></div>
-          <div class="media-recommendations col-md-6"></div>
+          <div class="media-recommendations col-md-6">
+            <div class="row">
+              <h3>5 Movies to match your mood</h3>
+
+            </div>
+          </div>
         </div>
       </div>
     </main>
