WIP: styling HTML

--- a/src/index.html
+++ b/src/index.html
@@ -42,12 +42,27 @@
           <div class="media-recommendations col-md-6">
             <div class="row">
               <h3>5 Movies to match your mood</h3>
-
+            </div>
+            <div class="row">
+              <h3>5 Movies to match your mood</h3>
             </div>
           </div>
         </div>
       </div>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="container">
+        <p>
+          This is a team week project created during week 7 of the Epicodus Code
+          Bootcamp.
+        </p>
+        <ul>
+          <li><a href="https://github.com/aGhouzlane">Ahmed G.</a></li>
+          <li><a href="https://github.com/jonathanstull">Jonathan S.</a></li>
+          <li><a href="https://github.com/basicjohn">John E.</a></li>
+          <li><a href="https://github.com/reeder32">Nicholas R.</a></li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
