update index page & stylesheet

--- a/src/index.html
+++ b/src/index.html
@@ -34,10 +34,13 @@
                 Find Playlist
               </button>
             </form>
-            <hr />
           </div>
         </div>
-        <div class="row">
+      </div>
+    </main>
+    <div id="mood-outputs">
+      <div class="container" >
+        <div class="row" id="mood-outputs">
           <div class="spotify-player col-md-6"></div>
           <div class="media-recommendations col-md-6">
             <div class="row">
@@ -49,14 +52,14 @@
           </div>
         </div>
       </div>
-    </main>
+    </div>
     <footer>
       <div class="container">
         <p>
           This is a team week project created during week 7 of the Epicodus Code
           Bootcamp.
         </p>
-        <ul>
+        <ul id="contributors">
           <li><a href="https://github.com/aGhouzlane">Ahmed G.</a></li>
           <li><a href="https://github.com/jonathanstull">Jonathan S.</a></li>
           <li><a href="https://github.com/basicjohn">John E.</a></li>
