--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mood Music</title>
+    <title>Mood Media</title>
   </head>
   <body>
     <header>
@@ -31,7 +31,7 @@
                 id="valenceRange"
               /><br />
               <button id="find" class="btn btn-dark" type="button">
-                Find Playlist
+                Select Mood
               </button>
             </form>
           </div>
@@ -39,15 +39,20 @@
       </div>
     </main>
     <div id="mood-outputs">
-      <div class="container" >
-        <div class="row" id="mood-outputs">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <h2>Something to match your mood</h2>
+            <p>Here are a few pieces of media to ride the mood..</p>
+            <hr />
+          </div>
           <div class="spotify-player col-md-6"></div>
           <div class="media-recommendations col-md-6">
             <div class="row">
-              <h3>5 Movies to match your mood</h3>
+              <h3>Movies</h3>
             </div>
             <div class="row">
-              <h3>5 Movies to match your mood</h3>
+              <h3>Books</h3>
             </div>
           </div>
         </div>
