fix slider and click color changes

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
         <div class="row" id="form-wrapper">
           <div class="col-md-12">
             <form>
-              <p><span id="valenceOutput">Happy</span></p>
+              <p class="output-text"><span id="valenceOutput">Happy</span></p>
               <label for="valenceRange"><span>Find Your Mood </span> </label
               ><br />
               <input
