add styles & constant colors

--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
         <div class="row">
           <div class="col-md-12">
             <h2>Something to match your mood</h2>
-            <p>Here are a few pieces of media to ride the mood..</p>
+            <p>Below are a few pieces of media to ride the mood...</p>
             <hr />
           </div>
           <div class="spotify-player col-md-6"></div>
