--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,9 @@
   <body>
     <header>
       <div class="container">
-        <h1>Mood Music<span class="yellow">.</span></h1>
+        <h1>Mood Media<span class="yellow">.</span></h1>
         <h2>
-          Find media that's right for your mood<span class="yellow">.</span>
+          Find media to match your mood<span class="yellow">.</span>
         </h2>
       </div>
     </header>
@@ -21,7 +21,7 @@
           <div class="col-md-12">
             <form>
               <p class="output-text"><span id="valenceOutput">Happy</span></p>
-              <label for="valenceRange"><span>Find Your Mood </span> </label
+              <label for="valenceRange"><span>Slide To Your Mood</span></label
               ><br />
               <input
                 type="range"
@@ -43,16 +43,64 @@
         <div class="row">
           <div class="col-md-12">
             <h2>Something to match your mood</h2>
-            <p>Below are a few pieces of media to ride the mood...</p>
-            <hr />
+            <p>Below are a few pieces of media to help ride the mood...</p>
           </div>
           <div class="spotify-player col-md-6"></div>
           <div class="media-recommendations col-md-6">
             <div class="row">
-              <h3>Movies</h3>
+              <div class="col-md-12">
+                <h3>Movies</h3>
+              </div>
+              <div class="col-md-12 movie-result">
+                <h4 class="title">Jurrasic Park</h4>
+                <p class="description">
+                  Jurassic Park is a science fiction-adventure-drama film
+                  directed by Steven Spielberg, based upon the novel...
+                </p>
+                <h5 class="resource"><a href="#">Watch the Trailer</a></h5>
+              </div>
+            <div class="col-md-12 movie-result">
+              <h4 class="title">Jurrasic Park</h4>
+              <p class="description">
+                Jurassic Park is a science fiction-adventure-drama film
+                directed by Steven Spielberg, based upon the novel...
+              </p>
+              <h5 class="resource"><a href="#">Watch the Trailer</a></h5>
+            </div>
+            <div class="col-md-12 movie-result">
+                <h4 class="title">Jurrasic Park</h4>
+                <p class="description">
+                  Jurassic Park is a science fiction-adventure-drama film
+                  directed by Steven Spielberg, based upon the novel...
+                </p>
+                <h5 class="resource"><a href="#">Watch the Trailer</a></h5>
+              </div>
             </div>
             <div class="row">
-              <h3>Books</h3>
+              <div class="col-md-12">
+                <h3>Books</h3>
+              </div>
+              <div class="col-md-12 movie-result">
+                <h4 class="title">Jurrasic Park</h4>
+                <p class="description">
+                  Jurassic Park is a science fiction-adventure-drama film
+                  directed by Steven Spielberg, based upon the novel...
+                </p>
+              </div>
+              <div class="col-md-12 movie-result">
+                <h4 class="title">Jurrasic Park</h4>
+                <p class="description">
+                  Jurassic Park is a science fiction-adventure-drama film
+                  directed by Steven Spielberg, based upon the novel...
+                </p>
+              </div>
+              <div class="col-md-12 movie-result">
+                <h4 class="title">Jurrasic Park</h4>
+                <p class="description">
+                  Jurassic Park is a science fiction-adventure-drama film
+                  directed by Steven Spielberg, based upon the novel...
+                </p>
+              </div>
             </div>
           </div>
         </div>
