--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,7 @@
     <header>
       <div class="container">
         <h1>Mood Media<span class="yellow">.</span></h1>
-        <h2>
-          Find media to match your mood<span class="yellow">.</span>
-        </h2>
+        <h2>Find media to match your mood<span class="yellow">.</span></h2>
       </div>
     </header>
     <main>
@@ -47,58 +45,33 @@
           </div>
           <div class="spotify-player col-md-6"></div>
           <div class="media-recommendations col-md-6">
-            <div class="row">
-              <div class="col-md-12">
-                <h3>Movies</h3>
-              </div>
-              <div class="col-md-12 movie-result">
-                <h4 class="title">Jurrasic Park</h4>
-                <p class="description">
-                  Jurassic Park is a science fiction-adventure-drama film
-                  directed by Steven Spielberg, based upon the novel...
-                </p>
-                <h5 class="resource"><a href="#">Watch the Trailer</a></h5>
-              </div>
-            <div class="col-md-12 movie-result">
-              <h4 class="title">Jurrasic Park</h4>
-              <p class="description">
-                Jurassic Park is a science fiction-adventure-drama film
-                directed by Steven Spielberg, based upon the novel...
-              </p>
-              <h5 class="resource"><a href="#">Watch the Trailer</a></h5>
-            </div>
-            <div class="col-md-12 movie-result">
-                <h4 class="title">Jurrasic Park</h4>
-                <p class="description">
-                  Jurassic Park is a science fiction-adventure-drama film
-                  directed by Steven Spielberg, based upon the novel...
-                </p>
-                <h5 class="resource"><a href="#">Watch the Trailer</a></h5>
-              </div>
-            </div>
+            <div id="movie-results" class="row"></div>
             <div class="row">
               <div class="col-md-12">
                 <h3>Books</h3>
               </div>
               <div class="col-md-12 movie-result">
-                <h4 class="title">Jurrasic Park</h4>
+                <h4 class="title">Furiously Happy</h4>
                 <p class="description">
-                  Jurassic Park is a science fiction-adventure-drama film
-                  directed by Steven Spielberg, based upon the novel...
+                  In Furiously Happy, number-one New York Times best-selling
+                  author Jenny Lawson explores her lifelong battle with mental
+                  illness.
                 </p>
               </div>
               <div class="col-md-12 movie-result">
-                <h4 class="title">Jurrasic Park</h4>
+                <h4 class="title">Solve for Happy</h4>
                 <p class="description">
-                  Jurassic Park is a science fiction-adventure-drama film
-                  directed by Steven Spielberg, based upon the novel...
+                  Mo Gawdat is a remarkable thinker and the Chief Business
+                  Officer at Google's [X], an elite team of engineers that
+                  comprise Google's...
                 </p>
               </div>
               <div class="col-md-12 movie-result">
-                <h4 class="title">Jurrasic Park</h4>
+                <h4 class="title">Happy Is the New Healthy</h4>
                 <p class="description">
-                  Jurassic Park is a science fiction-adventure-drama film
-                  directed by Steven Spielberg, based upon the novel...
+                  Our lives have become so busy that we are living in a constant
+                  state of go, go, go. What did you do last Thursday? What about
+                  two weeks...
                 </p>
               </div>
             </div>
