cleaned & commented code

--- a/src/index.html
+++ b/src/index.html
@@ -8,12 +8,14 @@
   </head>
   <body>
     <header>
+      <!-- Page title section -->
       <div class="container">
         <h1>Mood Media<span class="yellow">.</span></h1>
         <h2>Find media to match your mood<span class="yellow">.</span></h2>
       </div>
     </header>
     <main>
+      <!-- Form section for range slider to select mood -->
       <div class="container">
         <div class="row" id="form-wrapper">
           <div class="col-md-12">
@@ -43,13 +45,16 @@
             <h2>Something to match your mood</h2>
             <p>Below are a few pieces of media to help ride the mood...</p>
           </div>
+          <!-- Output for chosen Spotify playlist -->
           <div class="spotify-player col-md-6"></div>
           <div class="media-recommendations col-md-6">
+            <!-- Output for TasteDive Movie results -->
             <div id="movie-results" class="row"></div>
             <div class="row">
               <div class="col-md-12">
                 <h3>Books</h3>
               </div>
+              <!-- Output for TasteDive Book results -->
               <div class="col-md-12 movie-result">
                 <h4 class="title">Furiously Happy</h4>
                 <p class="description">
